<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Vista menu botones-->
    <RelativeLayout
    android:id="@+id/vistamenubotones"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
        android:text="@string/salir" />
    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:text="@string/configuracion" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="#FBFBFB"
        android:layout_centerHorizontal="true"
        android:text="@string/titulomainactivitiy" />
    </RelativeLayout>
    <!--Vista Menu-->
    <LinearLayout
        android:id="@+id/vistamenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:gravity="center"
    android:visibility="gone">

        <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertaCaida"
        android:textColor="#72FFFFFF"
        android:layout_margin="5dp"
        android:textSize="24sp" />
        <Button
        android:id="@+id/botonAgregarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarTarea"
        android:textSize="24sp"
        android:background="#72FFFFFF"
        android:layout_margin="5dp"
        android:textColor="#000000"/>

        <Button
        android:id="@+id/botonEliminarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminarTarea"
        android:textSize="24sp"
        android:background="#72FFFFFF"
        android:layout_margin="5dp"
        android:textColor="#000000" />

        <Button
        android:id="@+id/botonAgregarResponsable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#72FFFFFF"
        android:layout_margin="5dp"
        android:text="@string/agregarResponsable"
        android:textSize="24sp"
        android:textColor="#000000" />
        <Button
            android:id="@+id/botonVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#72FFFFFF"
            android:layout_margin="5dp"
            android:text="Salir del Menu"
            android:textSize="24sp"
            android:textColor="#000000" />
</LinearLayout>
    <!--Vista Lista Tareas-->
    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerListaTareas"
         android:visibility="visible"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
    <!--Vista Ver Pasos-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vistaEjecucionTareas"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/anterior"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:visibility="visible"
            android:drawableStart="@drawable/before"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_margin="5dp"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_width="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:layout_margin="5dp"/>
            <Button
                android:id="@+id/botonAbandonarTarea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="Abandonar Tarea"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_margin="5dp"
            android:orientation="vertical"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_margin="5dp">
            <TextView
                android:id="@+id/descripcionPaso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#B1E8E2E2"
                android:text="@string/textPrueba"/>
            </ScrollView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/botonRepetirAudio"
                />
        </LinearLayout>
        <Button
            android:id="@+id/siguiente"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:visibility="visible"
            android:drawableStart="@drawable/next"
            android:layout_margin="5dp"
             />
    </LinearLayout>
    <!--vista Crear Tareas-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vistaCrearTareas"
        android:visibility="gone"
        android:layout_margin="5dp"
        >

    <LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="6"
    android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_width="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duracion De la Tarea"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="#66E1D8D8"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="Min"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
        <Button
            android:id="@+id/botonAgregarAyudaSonora"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="Agregar Ayuda Sonora"
            />
            <Button
                android:id="@+id/botonCancelarCrearTarea"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="Cancelar"
                />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9.5">
                <EditText
                    android:id="@+id/descripcionPaso2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Descripcion del Paso     "
                    android:ems="10"
                    android:background="#66E1D8D8"
                    android:textColor="#B1E8E2E2" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/botonAgregarOtroPaso"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="Agregar Paso"/>
                <Button
                    android:id="@+id/botonTerminarGuardarTarea"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="Terminar y Guardar Tarea"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--vista Agregar Responsable-->
    <LinearLayout
        android:id="@+id/vistaAgregarResponsable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#68FFFEFE"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:hint="Nombre y Apellido"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="0dp"
        android:background="#68FFFEFE"
        android:layout_weight="1"
        android:hint="Telefono"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="#68FFFEFE"
        android:layout_weight="1"
        android:hint="Relacion con el paciente"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/botonGuardarAgregarResponsable"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Guardar"/>
        <Button
            android:id="@+id/botonCancelarAgregarResponsable"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Cancelar"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>